--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "@strapi/plugin-cloud": "5.12.4",
     "@strapi/plugin-seo": "^2.0.4",
     "@strapi/plugin-users-permissions": "5.12.4",
+    "@strapi/provider-upload-aws-s3": "^5.33.0",
     "@strapi/strapi": "5.12.4",
     "better-sqlite3": "11.7.0",
     "patch-package": "^8.0.0",
+    "pg": "^8.16.3",
     "pluralize": "^8.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
